VCC/VCC/bin/Debug/y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | constant
   3                     | string
   4                     | '(' expression ')'
   5                     | generic_selection

   6  constant : I_CONSTANT
   7           | F_CONSTANT
   8           | ENUMERATION_CONSTANT

   9  enumeration_constant : IDENTIFIER

  10  string : STRING_LITERAL
  11         | FUNC_NAME

  12  generic_selection : GENERIC '(' assignment_expression ',' generic_assoc_list ')'

  13  generic_assoc_list : generic_association
  14                     | generic_assoc_list ',' generic_association

  15  generic_association : type_name ':' assignment_expression
  16                      | DEFAULT ':' assignment_expression

  17  postfix_expression : primary_expression
  18                     | postfix_expression '[' expression ']'
  19                     | postfix_expression '(' ')'
  20                     | postfix_expression '(' argument_expression_list ')'
  21                     | postfix_expression '.' IDENTIFIER
  22                     | postfix_expression PTR_OP IDENTIFIER
  23                     | postfix_expression INC_OP
  24                     | postfix_expression DEC_OP
  25                     | '(' type_name ')' '{' initializer_list '}'
  26                     | '(' type_name ')' '{' initializer_list ',' '}'

  27  argument_expression_list : assignment_expression
  28                           | argument_expression_list ',' assignment_expression

  29  unary_expression : postfix_expression
  30                   | INC_OP unary_expression
  31                   | DEC_OP unary_expression
  32                   | unary_operator cast_expression
  33                   | SIZEOF unary_expression
  34                   | SIZEOF '(' type_name ')'
  35                   | ALIGNOF '(' type_name ')'

  36  unary_operator : '&'
  37                 | '*'
  38                 | '+'
  39                 | '-'
  40                 | '~'
  41                 | '!'

  42  cast_expression : unary_expression
  43                  | '(' type_name ')' cast_expression

  44  multiplicative_expression : cast_expression
  45                            | multiplicative_expression '*' cast_expression
  46                            | multiplicative_expression '/' cast_expression
  47                            | multiplicative_expression '%' cast_expression

  48  additive_expression : multiplicative_expression
  49                      | additive_expression '+' multiplicative_expression
  50                      | additive_expression '-' multiplicative_expression

  51  shift_expression : additive_expression
  52                   | shift_expression LEFT_OP additive_expression
  53                   | shift_expression RIGHT_OP additive_expression

  54  relational_expression : shift_expression
  55                        | relational_expression '<' shift_expression
  56                        | relational_expression '>' shift_expression
  57                        | relational_expression LE_OP shift_expression
  58                        | relational_expression GE_OP shift_expression

  59  equality_expression : relational_expression
  60                      | equality_expression EQ_OP relational_expression
  61                      | equality_expression NE_OP relational_expression

  62  and_expression : equality_expression
  63                 | and_expression '&' equality_expression

  64  exclusive_or_expression : and_expression
  65                          | exclusive_or_expression '^' and_expression

  66  inclusive_or_expression : exclusive_or_expression
  67                          | inclusive_or_expression '|' exclusive_or_expression

  68  logical_and_expression : inclusive_or_expression
  69                         | logical_and_expression AND_OP inclusive_or_expression

  70  logical_or_expression : logical_and_expression
  71                        | logical_or_expression OR_OP logical_and_expression

  72  conditional_expression : logical_or_expression
  73                         | logical_or_expression '?' expression ':' conditional_expression

  74  assignment_expression : conditional_expression
  75                        | unary_expression assignment_operator assignment_expression

  76  assignment_operator : '='
  77                      | MUL_ASSIGN
  78                      | DIV_ASSIGN
  79                      | MOD_ASSIGN
  80                      | ADD_ASSIGN
  81                      | SUB_ASSIGN
  82                      | LEFT_ASSIGN
  83                      | RIGHT_ASSIGN
  84                      | AND_ASSIGN
  85                      | XOR_ASSIGN
  86                      | OR_ASSIGN

  87  expression : assignment_expression
  88             | expression ',' assignment_expression

  89  constant_expression : conditional_expression

  90  declaration : declaration_specifiers ';'
  91              | declaration_specifiers init_declarator_list ';'
  92              | static_assert_declaration

  93  declaration_specifiers : storage_class_specifier declaration_specifiers
  94                         | storage_class_specifier
  95                         | type_specifier declaration_specifiers
  96                         | type_specifier
  97                         | type_qualifier declaration_specifiers
  98                         | type_qualifier
  99                         | function_specifier declaration_specifiers
 100                         | function_specifier
 101                         | alignment_specifier declaration_specifiers
 102                         | alignment_specifier

 103  init_declarator_list : init_declarator
 104                       | init_declarator_list ',' init_declarator

 105  init_declarator : declarator '=' initializer
 106                  | declarator

 107  storage_class_specifier : TYPEDEF
 108                          | EXTERN
 109                          | STATIC
 110                          | THREAD_LOCAL
 111                          | AUTO
 112                          | REGISTER

 113  type_specifier : VOID
 114                 | CHAR
 115                 | SHORT
 116                 | INT
 117                 | LONG
 118                 | FLOAT
 119                 | DOUBLE
 120                 | SIGNED
 121                 | UNSIGNED
 122                 | BOOL
 123                 | COMPLEX
 124                 | IMAGINARY
 125                 | atomic_type_specifier
 126                 | struct_or_union_specifier
 127                 | enum_specifier
 128                 | TYPEDEF_NAME

 129  struct_or_union_specifier : struct_or_union '{' struct_declaration_list '}'
 130                            | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
 131                            | struct_or_union IDENTIFIER

 132  struct_or_union : STRUCT
 133                  | UNION

 134  struct_declaration_list : struct_declaration
 135                          | struct_declaration_list struct_declaration

 136  struct_declaration : specifier_qualifier_list ';'
 137                     | specifier_qualifier_list struct_declarator_list ';'
 138                     | static_assert_declaration

 139  specifier_qualifier_list : type_specifier specifier_qualifier_list
 140                           | type_specifier
 141                           | type_qualifier specifier_qualifier_list
 142                           | type_qualifier

 143  struct_declarator_list : struct_declarator
 144                         | struct_declarator_list ',' struct_declarator

 145  struct_declarator : ':' constant_expression
 146                    | declarator ':' constant_expression
 147                    | declarator

 148  enum_specifier : ENUM '{' enumerator_list '}'
 149                 | ENUM '{' enumerator_list ',' '}'
 150                 | ENUM IDENTIFIER '{' enumerator_list '}'
 151                 | ENUM IDENTIFIER '{' enumerator_list ',' '}'
 152                 | ENUM IDENTIFIER

 153  enumerator_list : enumerator
 154                  | enumerator_list ',' enumerator

 155  enumerator : enumeration_constant '=' constant_expression
 156             | enumeration_constant

 157  atomic_type_specifier : ATOMIC '(' type_name ')'

 158  type_qualifier : CONST
 159                 | RESTRICT
 160                 | VOLATILE
 161                 | ATOMIC

 162  function_specifier : INLINE
 163                     | NORETURN

 164  alignment_specifier : ALIGNAS '(' type_name ')'
 165                      | ALIGNAS '(' constant_expression ')'

 166  declarator : pointer direct_declarator
 167             | direct_declarator

 168  direct_declarator : IDENTIFIER
 169                    | '(' declarator ')'
 170                    | direct_declarator '[' ']'
 171                    | direct_declarator '[' '*' ']'
 172                    | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
 173                    | direct_declarator '[' STATIC assignment_expression ']'
 174                    | direct_declarator '[' type_qualifier_list '*' ']'
 175                    | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 176                    | direct_declarator '[' type_qualifier_list assignment_expression ']'
 177                    | direct_declarator '[' type_qualifier_list ']'
 178                    | direct_declarator '[' assignment_expression ']'
 179                    | direct_declarator '(' parameter_type_list ')'
 180                    | direct_declarator '(' ')'
 181                    | direct_declarator '(' identifier_list ')'

 182  pointer : '*' type_qualifier_list pointer
 183          | '*' type_qualifier_list
 184          | '*' pointer
 185          | '*'

 186  type_qualifier_list : type_qualifier
 187                      | type_qualifier_list type_qualifier

 188  parameter_type_list : parameter_list ',' ELLIPSIS
 189                      | parameter_list

 190  parameter_list : parameter_declaration
 191                 | parameter_list ',' parameter_declaration

 192  parameter_declaration : declaration_specifiers declarator
 193                        | declaration_specifiers abstract_declarator
 194                        | declaration_specifiers

 195  identifier_list : IDENTIFIER
 196                  | identifier_list ',' IDENTIFIER

 197  type_name : specifier_qualifier_list abstract_declarator
 198            | specifier_qualifier_list

 199  abstract_declarator : pointer direct_abstract_declarator
 200                      | pointer
 201                      | direct_abstract_declarator

 202  direct_abstract_declarator : '(' abstract_declarator ')'
 203                             | '[' ']'
 204                             | '[' '*' ']'
 205                             | '[' STATIC type_qualifier_list assignment_expression ']'
 206                             | '[' STATIC assignment_expression ']'
 207                             | '[' type_qualifier_list STATIC assignment_expression ']'
 208                             | '[' type_qualifier_list assignment_expression ']'
 209                             | '[' type_qualifier_list ']'
 210                             | '[' assignment_expression ']'
 211                             | direct_abstract_declarator '[' ']'
 212                             | direct_abstract_declarator '[' '*' ']'
 213                             | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
 214                             | direct_abstract_declarator '[' STATIC assignment_expression ']'
 215                             | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
 216                             | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 217                             | direct_abstract_declarator '[' type_qualifier_list ']'
 218                             | direct_abstract_declarator '[' assignment_expression ']'
 219                             | '(' ')'
 220                             | '(' parameter_type_list ')'
 221                             | direct_abstract_declarator '(' ')'
 222                             | direct_abstract_declarator '(' parameter_type_list ')'

 223  initializer : '{' initializer_list '}'
 224              | '{' initializer_list ',' '}'
 225              | assignment_expression

 226  initializer_list : designation initializer
 227                   | initializer
 228                   | initializer_list ',' designation initializer
 229                   | initializer_list ',' initializer

 230  designation : designator_list '='

 231  designator_list : designator
 232                  | designator_list designator

 233  designator : '[' constant_expression ']'
 234             | '.' IDENTIFIER

 235  static_assert_declaration : STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

 236  statement : labeled_statement
 237            | compound_statement
 238            | expression_statement
 239            | selection_statement
 240            | iteration_statement
 241            | jump_statement

 242  labeled_statement : IDENTIFIER ':' statement
 243                    | CASE constant_expression ':' statement
 244                    | DEFAULT ':' statement

 245  compound_statement : '{' '}'
 246                     | '{' block_item_list '}'

 247  block_item_list : block_item
 248                  | block_item_list block_item

 249  block_item : declaration
 250             | statement

 251  expression_statement : ';'
 252                       | expression ';'

 253  selection_statement : IF '(' expression ')' statement ELSE statement
 254                      | IF '(' expression ')' statement
 255                      | SWITCH '(' expression ')' statement

 256  iteration_statement : WHILE '(' expression ')' statement
 257                      | DO statement WHILE '(' expression ')' ';'
 258                      | FOR '(' expression_statement expression_statement ')' statement
 259                      | FOR '(' expression_statement expression_statement expression ')' statement
 260                      | FOR '(' declaration expression_statement ')' statement
 261                      | FOR '(' declaration expression_statement expression ')' statement

 262  jump_statement : GOTO IDENTIFIER ';'
 263                 | CONTINUE ';'
 264                 | BREAK ';'
 265                 | RETURN ';'
 266                 | RETURN expression ';'

 267  translation_unit : external_declaration
 268                   | translation_unit external_declaration

 269  external_declaration : function_definition
 270                       | declaration

 271  function_definition : declaration_specifiers declarator declaration_list compound_statement
 272                      | declaration_specifiers declarator compound_statement

 273  declaration_list : declaration
 274                   | declaration_list declaration

state 0
	$accept : . translation_unit $end  (0)

	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	STATIC_ASSERT  shift 29
	THREAD_LOCAL  shift 30
	.  error

	translation_unit  goto 31
	declaration  goto 32
	declaration_specifiers  goto 33
	static_assert_declaration  goto 34
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43
	external_declaration  goto 44
	function_definition  goto 45


state 1
	type_specifier : TYPEDEF_NAME .  (128)

	.  reduce 128


state 2
	storage_class_specifier : TYPEDEF .  (107)

	.  reduce 107


state 3
	storage_class_specifier : EXTERN .  (108)

	.  reduce 108


state 4
	storage_class_specifier : STATIC .  (109)

	.  reduce 109


state 5
	storage_class_specifier : AUTO .  (111)

	.  reduce 111


state 6
	storage_class_specifier : REGISTER .  (112)

	.  reduce 112


state 7
	function_specifier : INLINE .  (162)

	.  reduce 162


state 8
	type_qualifier : CONST .  (158)

	.  reduce 158


state 9
	type_qualifier : RESTRICT .  (159)

	.  reduce 159


state 10
	type_qualifier : VOLATILE .  (160)

	.  reduce 160


state 11
	type_specifier : BOOL .  (122)

	.  reduce 122


state 12
	type_specifier : CHAR .  (114)

	.  reduce 114


state 13
	type_specifier : SHORT .  (115)

	.  reduce 115


state 14
	type_specifier : INT .  (116)

	.  reduce 116


state 15
	type_specifier : LONG .  (117)

	.  reduce 117


state 16
	type_specifier : SIGNED .  (120)

	.  reduce 120


state 17
	type_specifier : UNSIGNED .  (121)

	.  reduce 121


state 18
	type_specifier : FLOAT .  (118)

	.  reduce 118


state 19
	type_specifier : DOUBLE .  (119)

	.  reduce 119


state 20
	type_specifier : VOID .  (113)

	.  reduce 113


state 21
	type_specifier : COMPLEX .  (123)

	.  reduce 123


state 22
	type_specifier : IMAGINARY .  (124)

	.  reduce 124


state 23
	struct_or_union : STRUCT .  (132)

	.  reduce 132


state 24
	struct_or_union : UNION .  (133)

	.  reduce 133


state 25
	enum_specifier : ENUM . '{' enumerator_list '}'  (148)
	enum_specifier : ENUM . '{' enumerator_list ',' '}'  (149)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list '}'  (150)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list ',' '}'  (151)
	enum_specifier : ENUM . IDENTIFIER  (152)

	IDENTIFIER  shift 46
	'{'  shift 47
	.  error


state 26
	alignment_specifier : ALIGNAS . '(' type_name ')'  (164)
	alignment_specifier : ALIGNAS . '(' constant_expression ')'  (165)

	'('  shift 48
	.  error


27: shift/reduce conflict (shift 49, reduce 161) on '('
state 27
	atomic_type_specifier : ATOMIC . '(' type_name ')'  (157)
	type_qualifier : ATOMIC .  (161)

	'('  shift 49
	IDENTIFIER  reduce 161
	TYPEDEF_NAME  reduce 161
	TYPEDEF  reduce 161
	EXTERN  reduce 161
	STATIC  reduce 161
	AUTO  reduce 161
	REGISTER  reduce 161
	INLINE  reduce 161
	CONST  reduce 161
	RESTRICT  reduce 161
	VOLATILE  reduce 161
	BOOL  reduce 161
	CHAR  reduce 161
	SHORT  reduce 161
	INT  reduce 161
	LONG  reduce 161
	SIGNED  reduce 161
	UNSIGNED  reduce 161
	FLOAT  reduce 161
	DOUBLE  reduce 161
	VOID  reduce 161
	COMPLEX  reduce 161
	IMAGINARY  reduce 161
	STRUCT  reduce 161
	UNION  reduce 161
	ENUM  reduce 161
	ALIGNAS  reduce 161
	ATOMIC  reduce 161
	NORETURN  reduce 161
	THREAD_LOCAL  reduce 161
	')'  reduce 161
	','  reduce 161
	':'  reduce 161
	'['  reduce 161
	'*'  reduce 161
	';'  reduce 161


state 28
	function_specifier : NORETURN .  (163)

	.  reduce 163


state 29
	static_assert_declaration : STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'  (235)

	'('  shift 50
	.  error


state 30
	storage_class_specifier : THREAD_LOCAL .  (110)

	.  reduce 110


state 31
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (268)

	$end  accept
	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	STATIC_ASSERT  shift 29
	THREAD_LOCAL  shift 30
	.  error

	declaration  goto 32
	declaration_specifiers  goto 33
	static_assert_declaration  goto 34
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43
	external_declaration  goto 51
	function_definition  goto 45


state 32
	external_declaration : declaration .  (270)

	.  reduce 270


state 33
	declaration : declaration_specifiers . ';'  (90)
	declaration : declaration_specifiers . init_declarator_list ';'  (91)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (271)
	function_definition : declaration_specifiers . declarator compound_statement  (272)

	IDENTIFIER  shift 52
	'('  shift 53
	'*'  shift 54
	';'  shift 55
	.  error

	init_declarator_list  goto 56
	init_declarator  goto 57
	declarator  goto 58
	pointer  goto 59
	direct_declarator  goto 60


state 34
	declaration : static_assert_declaration .  (92)

	.  reduce 92


state 35
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (93)
	declaration_specifiers : storage_class_specifier .  (94)

	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	THREAD_LOCAL  shift 30
	IDENTIFIER  reduce 94
	'('  reduce 94
	')'  reduce 94
	','  reduce 94
	'['  reduce 94
	'*'  reduce 94
	';'  reduce 94

	declaration_specifiers  goto 61
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43


state 36
	declaration_specifiers : type_specifier . declaration_specifiers  (95)
	declaration_specifiers : type_specifier .  (96)

	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	THREAD_LOCAL  shift 30
	IDENTIFIER  reduce 96
	'('  reduce 96
	')'  reduce 96
	','  reduce 96
	'['  reduce 96
	'*'  reduce 96
	';'  reduce 96

	declaration_specifiers  goto 62
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43


state 37
	declaration_specifiers : type_qualifier . declaration_specifiers  (97)
	declaration_specifiers : type_qualifier .  (98)

	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	THREAD_LOCAL  shift 30
	IDENTIFIER  reduce 98
	'('  reduce 98
	')'  reduce 98
	','  reduce 98
	'['  reduce 98
	'*'  reduce 98
	';'  reduce 98

	declaration_specifiers  goto 63
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43


state 38
	declaration_specifiers : function_specifier . declaration_specifiers  (99)
	declaration_specifiers : function_specifier .  (100)

	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	THREAD_LOCAL  shift 30
	IDENTIFIER  reduce 100
	'('  reduce 100
	')'  reduce 100
	','  reduce 100
	'['  reduce 100
	'*'  reduce 100
	';'  reduce 100

	declaration_specifiers  goto 64
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43


state 39
	declaration_specifiers : alignment_specifier . declaration_specifiers  (101)
	declaration_specifiers : alignment_specifier .  (102)

	TYPEDEF_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNAS  shift 26
	ATOMIC  shift 27
	NORETURN  shift 28
	THREAD_LOCAL  shift 30
	IDENTIFIER  reduce 102
	'('  reduce 102
	')'  reduce 102
	','  reduce 102
	'['  reduce 102
	'*'  reduce 102
	';'  reduce 102

	declaration_specifiers  goto 65
	storage_class_specifier  goto 35
	type_specifier  goto 36
	type_qualifier  goto 37
	function_specifier  goto 38
	alignment_specifier  goto 39
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43


state 40
	type_specifier : atomic_type_specifier .  (125)

	.  reduce 125


state 41
	type_specifier : struct_or_union_specifier .  (126)

	.  reduce 126


state 42
	type_specifier : enum_specifier .  (127)

	.  reduce 127


state 43
	struct_or_union_specifier : struct_or_union . '{' struct_declaration_list '}'  (129)
	struct_or_union_specifier : struct_or_union . IDENTIFIER '{' struct_declaration_list '}'  (130)
	struct_or_union_specifier : struct_or_union . IDENTIFIER  (131)

	IDENTIFIER  shift 66
	'{'  shift 67
	.  error


state 44
	translation_unit : external_declaration .  (267)

	.  reduce 267


state 45
	external_declaration : function_definition .  (269)

	.  reduce 269


state 46
	enum_specifier : ENUM IDENTIFIER . '{' enumerator_list '}'  (150)
	enum_specifier : ENUM IDENTIFIER . '{' enumerator_list ',' '}'  (151)
	enum_specifier : ENUM IDENTIFIER .  (152)

	'{'  shift 68
	IDENTIFIER  reduce 152
	TYPEDEF_NAME  reduce 152
	TYPEDEF  reduce 152
	EXTERN  reduce 152
	STATIC  reduce 152
	AUTO  reduce 152
	REGISTER  reduce 152
	INLINE  reduce 152
	CONST  reduce 152
	RESTRICT  reduce 152
	VOLATILE  reduce 152
	BOOL  reduce 152
	CHAR  reduce 152
	SHORT  reduce 152
	INT  reduce 152
	LONG  reduce 152
	SIGNED  reduce 152
	UNSIGNED  reduce 152
	FLOAT  reduce 152
	DOUBLE  reduce 152
	VOID  reduce 152
	COMPLEX  reduce 152
	IMAGINARY  reduce 152
	STRUCT  reduce 152
	UNION  reduce 152
	ENUM  reduce 152
	ALIGNAS  reduce 152
	ATOMIC  reduce 152
	NORETURN  reduce 152
	THREAD_LOCAL  reduce 152
	'('  reduce 152
	')'  reduce 152
	','  reduce 152
	':'  reduce 152
	'['  reduce 152
	'*'  reduce 152
	';'  reduce 152


state 47
	enum_specifier : ENUM '{' . enumerator_list '}'  (148)
	enum_specifier : ENUM '{' . enumerator_list ',' '}'  (149)

	IDENTIFIER  shift 69
	.  error

	enumeration_constant  goto 70
	enumerator_list  goto 71
	enumerator  goto 72


state 48
	alignment_specifier : ALIGNAS '(' . type_name ')'  (164)
	alignment_specifier : ALIGNAS '(' . constant_expression ')'  (165)

	IDENTIFIER  shift 73
	I_CONSTANT  shift 74
	F_CONSTANT  shift 75
	STRING_LITERAL  shift 76
	FUNC_NAME  shift 77
	SIZEOF  shift 78
	INC_OP  shift 79
	DEC_OP  shift 80
	TYPEDEF_NAME  shift 1
	ENUMERATION_CONSTANT  shift 81
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ALIGNOF  shift 82
	ATOMIC  shift 27
	GENERIC  shift 83
	'('  shift 84
	'&'  shift 85
	'*'  shift 86
	'+'  shift 87
	'-'  shift 88
	'~'  shift 89
	'!'  shift 90
	.  error

	primary_expression  goto 91
	constant  goto 92
	string  goto 93
	generic_selection  goto 94
	type_name  goto 95
	postfix_expression  goto 96
	unary_expression  goto 97
	unary_operator  goto 98
	cast_expression  goto 99
	multiplicative_expression  goto 100
	additive_expression  goto 101
	shift_expression  goto 102
	relational_expression  goto 103
	equality_expression  goto 104
	and_expression  goto 105
	exclusive_or_expression  goto 106
	inclusive_or_expression  goto 107
	logical_and_expression  goto 108
	logical_or_expression  goto 109
	conditional_expression  goto 110
	constant_expression  goto 111
	type_specifier  goto 112
	type_qualifier  goto 113
	atomic_type_specifier  goto 40
	struct_or_union_specifier  goto 41
	enum_specifier  goto 42
	struct_or_union  goto 43
	specifier_qualifier_list  goto 114


state 49
	atomic_type_specifier : ATOMIC '(' . type_name ')'  (157)

	TYPEDEF_NAME  shift 1
	CONST  shift 8
	RESTRICT  shift 9
	VOLATILE  shift 10
	BOOL  shift 11
	CHAR  shift 12
	SHORT  shift 13
	INT  shift 14
	LONG  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	FLOAT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	ATOMIC  shift 27
	.  error
